--- a/home.html
+++ b/home.html
@@ -12,7 +12,11 @@
 
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/pretty-checkbox@3.0/dist/pretty-checkbox.min.css">
-    <link href='/static/assets/css/buyer/survey.css' rel='stylesheet'>
+    <link href='static/assets/css/buyer/mobile.css' rel='stylesheet'>
+    <!-- <link rel="stylesheet" media="screen and (min-width: 601px)" href="static/assets/css/buyer/tablet.css"> -->
+    <!-- <link rel="stylesheet" media="screen and (max-width: 600px)" href="static/assets/css/buyer/mobile.css"> -->
+
+
     <link href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.0.3/css/font-awesome.css' rel='stylesheet'>
 
 
@@ -45,11 +49,12 @@
                 <div class="col-12 survey-intro-desc pl-0 pr-0">
                     Thanks for purchasing our product. Share your experience on Amazon with our product and get an Amazon giftcard when it&apos;s verified. No shipping charges, no hidden fees, no credit card required!
                 </div>
+
             </div>
             <div class="div-back-grey"></div>
 
             <div class="container w-auto card-gift">
-                <img src="/static/assets/img/buyer/gift_box.svg" alt="Gift" class="svg-gift">
+                <img src="static/assets/img/buyer/gift_box.svg" alt="Gift" class="svg-gift">
                 <div class="row">
                     <div class="col">
                         <span class="card-gift-title">YOUR GIFT</span>
@@ -58,7 +63,7 @@
                 <div class="row">
                     <div class="col-6">
                         <div class="div-card-git-img">
-                            <img src="/static/assets/img/buyer/gift.png" class="card-gift-img">
+                            <img src="static/assets/img/buyer/gift.png" class="card-gift-img">
                         </div>
                     </div>
                     <div class="col-6 my-auto">
@@ -74,7 +79,7 @@
                     <div class="col-12 mx-auto my-auto">
                         <button class="btn next-btn w-90" onclick="app.changeSection('#p1', '#p2');">
                             <span>Yes, I'm ready!</span>
-                            <img src="/static/assets/img/buyer/btn-next.svg" class="next-btn-arrow float-right">
+                            <img src="static/assets/img/buyer/btn-next.svg" class="next-btn-arrow float-right">
                         </button>
                     </div>
                     <div class="col-12 mx-auto my-auto w-90">
@@ -91,7 +96,7 @@
             </div>
         </div>
         <div class="container container-intro">
-            <img src="/static/assets/img/buyer/decide_later_mobile.svg" class="img-later">
+            <img src="static/assets/img/buyer/decide_later_mobile.svg" class="img-later">
             <div class="row mt-4">
                 <div class="col-12 survey-intro-title div-decide-later">
                     That&apos;s okay. You can come back anytime.
@@ -106,7 +111,7 @@
                 <div class="col-12 mx-auto my-auto ptb-32">
                     <button class="btn next-btn w-90 mb-0">
                     <span>Visit our Amazon Store</span>
-                    <img src="/static/assets/img/buyer/btn-next.svg" class="next-btn-arrow float-right">
+                    <img src="static/assets/img/buyer/btn-next.svg" class="next-btn-arrow float-right">
                 </button>
                 </div>
             </div>
@@ -156,7 +161,7 @@
                 <div class="col-12 mx-auto my-auto ptb-32">
                     <button class="btn next-btn w-90 mb-0"  onclick="app.changeSection('#p2', '#p3');">
                         <span>Get my gift</span>
-                        <img src="/static/assets/img/buyer/btn-next.svg" class="next-btn-arrow float-right">
+                        <img src="static/assets/img/buyer/btn-next.svg" class="next-btn-arrow float-right">
                     </button>
                 </div>
             </div>
@@ -185,7 +190,7 @@
             <div class="row container w-auto card-gift pl-0 pr-0 mt-4">
                 <div class="col-5">
                     <div class="div-card-git-img">
-                        <img src="/static/assets/img/buyer/gift.png" class="card-gift-img">
+                        <img src="static/assets/img/buyer/gift.png" class="card-gift-img">
                     </div>
                 </div>
                 <div class="col-7 my-auto">
@@ -199,7 +204,7 @@
                 </div>
                 <div class="col-5">
                     <div class="div-card-git-img">
-                        <img src="/static/assets/img/buyer/gift.png" class="card-gift-img">
+                        <img src="static/assets/img/buyer/gift.png" class="card-gift-img">
                     </div>
                 </div>
                 <div class="col-7 my-auto">
@@ -213,7 +218,7 @@
                 </div>
                 <div class="col-5">
                     <div class="div-card-git-img">
-                        <img src="/static/assets/img/buyer/gift.png" class="card-gift-img">
+                        <img src="static/assets/img/buyer/gift.png" class="card-gift-img">
                     </div>
                 </div>
                 <div class="col-7 my-auto">
@@ -227,7 +232,7 @@
                 </div>
                 <div class="col-5">
                     <div class="div-card-git-img">
-                        <img src="/static/assets/img/buyer/gift.png" class="card-gift-img">
+                        <img src="static/assets/img/buyer/gift.png" class="card-gift-img">
                     </div>
                 </div>
                 <div class="col-7 my-auto">
@@ -301,7 +306,7 @@
                 <div class="col-12 mx-auto my-auto ptb-32">
                     <button class="btn next-btn w-90 mb-0"  onclick="app.changeSection('#p3', '#p4');">
                         <span>Next Step</span>
-                        <img src="/static/assets/img/buyer/btn-next.svg" class="next-btn-arrow float-right">
+                        <img src="static/assets/img/buyer/btn-next.svg" class="next-btn-arrow float-right">
                     </button>
                 </div>
             </div>
@@ -333,7 +338,7 @@
             <div class="row container w-auto card-gift pl-0 pr-0 mt-4 card-amz">
                 <div class="col-12 mt-3">
                     <div class="div-card-git-img text-center">
-                        <img src="/static/assets/img/buyer/amazon.svg">
+                        <img src="static/assets/img/buyer/amazon.svg">
                     </div>
                 </div>
                 <div class="col-12 mt-3 mb-3 pl-3 pr-3">
@@ -357,7 +362,7 @@
                 <div class="col-12 mx-auto my-auto ptb-32">
                     <button class="btn next-btn w-90 mb-0" onclick="app.changeSection('#p4', '#p5');">
                         <span>Go to Amazon</span>
-                        <img src="/static/assets/img/buyer/btn-next.svg" class="next-btn-arrow float-right">
+                        <img src="static/assets/img/buyer/btn-next.svg" class="next-btn-arrow float-right">
                     </button>
                 </div>
             </div>
@@ -398,7 +403,7 @@
                 <div class="col-12 mx-auto my-auto ptb-32">
                     <button class="btn next-btn w-90 mb-0" onclick="app.changeSection('#p4b', '#p5');">
                     <span>Continue to buyer info</span>
-                    <img src="/static/assets/img/buyer/btn-next.svg" class="next-btn-arrow float-right">
+                    <img src="static/assets/img/buyer/btn-next.svg" class="next-btn-arrow float-right">
                 </button>
                 </div>
             </div>
@@ -429,7 +434,7 @@
             </div>
         </div>
         <div class="container w-auto card-gift mt-4 container-review card-gift card-gift-info">
-            <img src="/static/assets/img/buyer/gift_box.svg" alt="Gift" class="svg-gift">
+            <img src="static/assets/img/buyer/gift_box.svg" alt="Gift" class="svg-gift">
             <div class="row">
                 <div class="col">
                     <span class="card-gift-title">YOUR GIFT</span>
@@ -438,7 +443,7 @@
             <div class="row">
                 <div class="col-6">
                     <div class="div-card-git-img">
-                        <img src="/static/assets/img/buyer/gift.png" class="card-gift-img">
+                        <img src="static/assets/img/buyer/gift.png" class="card-gift-img">
                     </div>
                 </div>
                 <div class="col-6 my-auto">
@@ -471,7 +476,7 @@
         <div class="row container w-auto card-gift pl-0 pr-0 mt-4 container-review container-address">
             <div class="col-12 mx-auto my-auto text-center">
                 <button class="btn next-btn w-90 mb-0 loc-btn text-uppercase">
-                    <img src="/static/assets/img/buyer/home.svg" class="next-btn-arrow float-left">
+                    <img src="static/assets/img/buyer/home.svg" class="next-btn-arrow float-left">
                     <span>Get My Address</span>
                 </button>
             </div>
@@ -503,7 +508,7 @@
                 <div class="col-12 mx-auto my-auto ptb-32"  onclick="app.changeSection('#p5', '#p6');">
                     <button class="btn next-btn w-90 mb-0">
                     <span>Submit</span>
-                    <img src="/static/assets/img/buyer/btn-next.svg" class="next-btn-arrow float-right">
+                    <img src="static/assets/img/buyer/btn-next.svg" class="next-btn-arrow float-right">
                 </button>
                 </div>
             </div>
@@ -525,14 +530,14 @@
                     We&apos;ve got your feedback and information! The gift will be sent to your email/address when it’s verified! If you have any questions, feel free to contact us.
                 </div>
                 <div class="col-12 pl-0 pr-0 col-img-end">
-                    <img src="/static/assets/img/buyer/decide_later_mobile.svg" class="img-later img-end">
+                    <img src="static/assets/img/buyer/decide_later_mobile.svg" class="img-later img-end">
                 </div>
                 <div class="footer footer-normal footer-main footer-end w-100 h-auto mt-4">
                     <div class="center row mt-0">
                         <div class="col-12 mx-auto my-auto ptb-32">
                             <button class="btn next-btn w-90 mb-0">
                             <span>Submit</span>
-                            <img src="/static/assets/img/buyer/btn-next.svg" class="next-btn-arrow float-right">
+                            <img src="static/assets/img/buyer/btn-next.svg" class="next-btn-arrow float-right">
                         </button>
                         </div>
                     </div>
