--- a/pc_new.html
+++ b/pc_new.html
@@ -698,13 +698,13 @@ let app = new Vue({
             this.hideRightPoly = this.hideRightPoly_();
             this.hideBotPoly = this.hideBotPoly_();
             this.hideMainLogo = this.hideMainLogo_();
-            this.resizeFoovar(p2);          
+            // this.resizeFoovar(p2);          
         }
     }
 })
-$( window ).resize(function() {
-    var id_ = $("fieldset.show")[0].getAttribute('id');
-    app.resizeFoovar(id_)
-});
+// $( window ).resize(function() {
+//     var id_ = $("fieldset.show")[0].getAttribute('id');
+//     app.resizeFoovar(id_)
+// });
 </script>
 </html>
