adding pc fixes

--- a/pc_new.html
+++ b/pc_new.html
@@ -69,12 +69,12 @@
                                     </div>
                                 </div>
                                 <div class="row row-img">
-                                    <div class="col-5 col-lg-4">
+                                    <div class="col-5 col-lg-5 col-xl-4">
                                         <div class="div-card-git-img">
-                                            <img src="static/assets/img/buyer/gift.png" class="card-gift-img">
+                                            <img src="static/assets/img/buyer/gift.png" class="card-gift-img img-fluid">
                                         </div>
                                     </div>
-                                    <div class="col-7 col-lg-8 my-auto">
+                                    <div class="col-7 col-lg-7 col-xl-8 my-auto">
                                         <div class="div-card-gift-info">
                                             <span class="d-block card-amz-gift-title">Fancy Gift</span>
                                             <span class="d-block card-amz-gift-price">Worth $5.99</span>
@@ -225,12 +225,12 @@
                     <div class="col-12 col-lg-6 text-center pr-0 pl-0">
                         <div class="container-card-gift">
                             <div class="row container w-auto card-gift pl-0 pr-0 container-survey text-left">
-                                <div class="col-5">
+                                <div class="col-5 col-xl-4">
                                     <div class="div-card-git-img">
-                                        <img src="static/assets/img/buyer/gift.png" class="card-gift-img">
+                                        <img src="static/assets/img/buyer/gift.png" class="card-gift-img img-fluid">
                                     </div>
                                 </div>
-                                <div class="col-7 my-auto">
+                                <div class="col-7 col-xl-8 my-auto">
                                     <div class="div-card-gift-info">
                                         <span class="d-block card-amz-gift-title">Fancy Gift</span>
                                         <span class="d-block card-amz-gift-price">Worth $5.99</span>
@@ -239,12 +239,12 @@
                                 <div class="col-12 div-hr">
                                     <hr>
                                 </div>
-                                <div class="col-5">
+                                <div class="col-5 col-xl-4">
                                     <div class="div-card-git-img">
-                                        <img src="static/assets/img/buyer/gift.png" class="card-gift-img">
+                                        <img src="static/assets/img/buyer/gift.png" class="card-gift-img img-fluid">
                                     </div>
                                 </div>
-                                <div class="col-7 my-auto">
+                                <div class="col-7 col-xl-8 my-auto">
                                     <div class="div-card-gift-info">
                                         <span class="d-block card-amz-gift-title">Fancy Gift</span>
                                         <span class="d-block card-amz-gift-price">Worth $5.99</span>
@@ -253,12 +253,12 @@
                                 <div class="col-12 div-hr">
                                     <hr>
                                 </div>
-                                <div class="col-5">
+                                <div class="col-5 col-xl-4">
                                     <div class="div-card-git-img">
-                                        <img src="static/assets/img/buyer/gift.png" class="card-gift-img">
+                                        <img src="static/assets/img/buyer/gift.png" class="card-gift-img img-fluid">
                                     </div>
                                 </div>
-                                <div class="col-7 my-auto">
+                                <div class="col-7 col-xl-8 my-auto">
                                     <div class="div-card-gift-info">
                                         <span class="d-block card-amz-gift-title">Fancy Gift</span>
                                         <span class="d-block card-amz-gift-price">Worth $5.99</span>
@@ -267,12 +267,12 @@
                                 <div class="col-12 div-hr">
                                     <hr>
                                 </div>
-                                <div class="col-5 mb-4">
+                                <div class="col-5 col-xl-4 mb-4">
                                     <div class="div-card-git-img">
-                                        <img src="static/assets/img/buyer/gift.png" class="card-gift-img">
+                                        <img src="static/assets/img/buyer/gift.png" class="card-gift-img img-fluid">
                                     </div>
                                 </div>
-                                <div class="col-7 my-auto mb-4">
+                                <div class="col-7 col-xl-8 my-auto mb-4">
                                     <div class="div-card-gift-info">
                                         <span class="d-block card-amz-gift-title">Fancy Gift</span>
                                         <span class="d-block card-amz-gift-price">Worth $5.99</span>
@@ -506,12 +506,12 @@
                                     </div>
                                 </div>
                                 <div class="row row-img">
-                                    <div class="col-5 col-lg-4">
+                                    <div class="col-5 col-xl-4">
                                         <div class="div-card-git-img">
                                             <img src="static/assets/img/buyer/gift.png" class="card-gift-img">
                                         </div>
                                     </div>
-                                    <div class="col-7 col-lg-8 my-auto">
+                                    <div class="col-7 col-xl-8 my-auto">
                                         <div class="div-card-gift-info">
                                             <span class="d-block card-amz-gift-title">Fancy Gift</span>
                                             <span class="d-block card-amz-gift-price">Worth $5.99</span>
