added fixed footer

--- a/home.html
+++ b/home.html
@@ -482,7 +482,7 @@
             </div>
         </div>
 
-        <div class="row container w-auto card-gift pl-0 pr-0 mt-4 container-review">
+        <div class="row container w-auto card-gift pl-0 pr-0 mt-4 container-review container-review-end">
             <div class="col-12 form-group">
                 <label for="exampleInputEmail1" class="text-uppercase pt-3 pb-3 w-100">State & City</label>
                 <select v-model="p2State" class="col-5 mx-auto form-control d-inline-block">
