added padding bottom footer

--- a/home.html
+++ b/home.html
@@ -82,7 +82,7 @@
                             <img src="static/assets/img/buyer/btn-next.svg" class="next-btn-arrow float-right">
                         </button>
                     </div>
-                    <div class="col-12 mx-auto my-auto w-90">
+                    <div class="col-12 mx-auto my-auto w-90 pb-15">
                         <a onclick="app.changeSection('#p1', '#p2b');" href="#" class="link-survey">Let me think about it</a>
                     </div>
                 </div>
