Fixing padding issue

--- a/home.html
+++ b/home.html
@@ -110,7 +110,7 @@
             <div class="center row h-100 mt-0">
                 <div class="col-12 mx-auto my-auto ptb-32">
                     <button class="btn next-btn w-90 mb-0">
-                    <span>Visit our Amazon Store</span>
+                    <span>Visit Amazon Store</span>
                     <img src="static/assets/img/buyer/btn-next.svg" class="next-btn-arrow float-right">
                 </button>
                 </div>
