--- a/oldmobile.html
+++ b/oldmobile.html
@@ -61,12 +61,12 @@
                     </div>
                 </div>
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-6 col-md-3">
                         <div class="div-card-git-img">
                             <img src="static/assets/img/buyer/gift.png" class="card-gift-img">
                         </div>
                     </div>
-                    <div class="col-6 my-auto">
+                    <div class="col-6 col-md-9 my-auto">
                         <div class="div-card-gift-info">
                             <span class="d-block card-amz-gift-title">Fancy Gift</span>
                             <span class="d-block card-amz-gift-price">Worth $5.99</span>
@@ -482,7 +482,7 @@
             </div>
         </div>
 
-        <div class="row container w-auto card-gift pl-0 pr-0 mt-4 container-review">
+        <div class="row container w-auto card-gift pl-0 pr-0 mt-4 container-review  container-review-end">
             <div class="col-12 form-group">
                 <label for="exampleInputEmail1" class="text-uppercase pt-3 pb-3 w-100">State & City</label>
                 <select v-model="p2State" class="col-5 mx-auto form-control d-inline-block">
