--- a/pc_new.html
+++ b/pc_new.html
@@ -88,11 +88,11 @@
             </div>
             <div class="footer">
                 <div class="center row w-100 pt-2 pb-2">
-                    <div class="col-4 pr-0"></div>
-                    <div class="col-3 mx-auto my-auto pl-0 text-right">
+                    <div class="col-4 d-none d-lg-block pr-0"></div>
+                    <div class="col-4 col-lg-3 mx-auto my-auto pl-0 text-right">
                         <a onclick="app.changeSection('#p1', '#p2b');" href="#" class="link-survey">Let me think about it</a>
                     </div>
-                    <div class="col-5 mx-auto my-auto p-0 ptb-10">
+                    <div class="col-8 col-lg-5 mx-auto my-auto p-0 ptb-10">
                         <button class="btn next-btn p-2" onclick="app.changeSection('#p1', '#p2');">
                             <span>Yes, I'm ready!</span>
                             <img src="static/assets/img/buyer/btn-next.svg" class="next-btn-arrow float-right">
@@ -126,11 +126,11 @@
             </div>
             <div class="footer">
                 <div class="center row w-100 pt-2 pb-2">
-                    <div class="col-5 pr-0"></div>
-                    <div class="col-3 mx-auto my-auto pl-0 text-left">
+                    <div class="col-4 d-none d-lg-block pr-0"></div>
+                    <div class="col-3 d-none d-lg-block mx-auto my-auto pl-0 text-left">
                         
                     </div>
-                    <div class="col-4 mx-auto my-auto p-0">
+                    <div class="col-12 col-lg-5 mx-auto my-auto p-0">
                         <button class="btn next-btn w-90 p-2" onclick="app.changeSection('#p1', '#p2');">
                             <span>Visit our Amazon Store</span>
                             <img src="static/assets/img/buyer/btn-next.svg" class="next-btn-arrow float-right">
@@ -188,9 +188,9 @@
             </div>
             <div class="footer">
                 <div class="center row w-100 pt-2 pb-2">
-                    <div class="col-4 pr-0"></div>
-                    <div class="col-3 mx-auto my-auto pl-0 text-right"></div>
-                    <div class="col-5 mx-auto my-auto p-0 ptb-10">
+                    <div class="col-4 d-none d-lg-block  pr-0"></div>
+                    <div class="col-3  d-none d-lg-block mx-auto my-auto pl-0 text-right"></div>
+                    <div class="col-12 col-lg-5 mx-auto my-auto p-0 ptb-10">
                         <button class="btn next-btn p-2" onclick="app.changeSection('#p2', '#p3');">
                             <span>Get my gift!</span>
                             <img src="static/assets/img/buyer/btn-next.svg" class="next-btn-arrow float-right">
@@ -343,9 +343,9 @@
             </div>
             <div class="footer">
                 <div class="center row w-100 pt-2 pb-2">
-                    <div class="col-4 pr-0"></div>
-                    <div class="col-3 mx-auto my-auto pl-0 text-right"></div>
-                    <div class="col-5 mx-auto my-auto p-0 ptb-10">
+                    <div class="col-4 d-none d-lg-block pr-0"></div>
+                    <div class="col-3 d-none d-lg-block mx-auto my-auto pl-0 text-right"></div>
+                    <div class="col-12 col-lg-5 mx-auto my-auto p-0 ptb-10">
                         <button class="btn next-btn p-2" onclick="app.changeSection('#p3', '#p4');">
                             <span>Next Step</span>
                             <img src="static/assets/img/buyer/btn-next.svg" class="next-btn-arrow float-right">
@@ -408,9 +408,9 @@
             </div>
             <div class="footer">
                 <div class="center row w-100 pt-2 pb-2">
-                    <div class="col-4 pr-0"></div>
-                    <div class="col-3 mx-auto my-auto pl-0 text-right"></div>
-                    <div class="col-5 mx-auto my-auto p-0 ptb-10">
+                    <div class="col-4 d-none d-lg-block pr-0"></div>
+                    <div class="col-3 d-none d-lg-block mx-auto my-auto pl-0 text-right"></div>
+                    <div class="col-12 col-lg-5 mx-auto my-auto p-0 ptb-10">
                         <button class="btn next-btn p-2" onclick="app.changeSection('#p4', '#p5');">
                             <span>Go to Amazon</span>
                             <img src="static/assets/img/buyer/btn-next.svg" class="next-btn-arrow float-right">
@@ -459,9 +459,9 @@
             </div>
             <div class="footer">
                 <div class="center row w-100 pt-2 pb-2">
-                    <div class="col-4 pr-0"></div>
-                    <div class="col-3 mx-auto my-auto pl-0 text-right"></div>
-                    <div class="col-5 mx-auto my-auto p-0 ptb-10">
+                    <div class="col-4 d-none d-lg-block  pr-0"></div>
+                    <div class="col-3 d-none d-lg-block  mx-auto my-auto pl-0 text-right"></div>
+                    <div class="col-12 col-lg-5 mx-auto my-auto p-0 ptb-10">
                         <button class="btn next-btn p-2" onclick="app.changeSection('#p4b', '#p5');">
                             <span>Continue to buyer info</span>
                             <img src="static/assets/img/buyer/btn-next.svg" class="next-btn-arrow float-right">
@@ -573,9 +573,9 @@
             </div>
             <div class="footer">
                 <div class="center row w-100 pt-2 pb-2">
-                    <div class="col-4 pr-0"></div>
-                    <div class="col-3 mx-auto my-auto pl-0 text-right"></div>
-                    <div class="col-5 mx-auto my-auto p-0 ptb-10">
+                    <div class="col-4 d-none d-lg-block pr-0"></div>
+                    <div class="col-3 d-none d-lg-block mx-auto my-auto pl-0 text-right"></div>
+                    <div class="col-12 col-lg-5 mx-auto my-auto p-0 ptb-10">
                         <button class="btn next-btn p-2" onclick="app.changeSection('#p5', '#p6');">
                             <span>Submit</span>
                             <img src="static/assets/img/buyer/btn-next.svg" class="next-btn-arrow float-right">
@@ -586,7 +586,7 @@
         </fieldset>
         <fieldset id="p6">
             <div class="row h-100">
-                <div class="col-11 col-md-7 col-lg-5 mx-auto my-auto">
+                <div class="col-11 col-md-7 col-lg-4 mx-auto my-auto">
                     <div class="container-fluid container-end">
                         <div class="col-12 logo-end pr-10 pl-10 pt-4 mb-4">
                             Logo
